<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/text_add_photo"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/takePhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:contentDescription="@string/text_photo"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/SavePhotoB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/text_email"
        android:textSize="25sp" />

    <Button
        android:id="@+id/uploadPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SavePhotoB"
        android:layout_alignParentLeft="true"
        android:text="@string/text_upload_photo"
        android:textSize="25sp" />

    <Button
        android:id="@+id/takePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/uploadPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textSize="25sp" 
        android:text="@string/text_take_photo" />

</RelativeLayout>
