<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newTask"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_name" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textName"
        android:layout_below="@+id/textName"
        android:layout_marginTop="20dp"
        android:text="@string/text_description" />

    <EditText
        android:id="@+id/editTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textName"
        android:layout_alignBottom="@+id/textName"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@+id/textDescription"
        android:ems="10"
        android:inputType="textCapWords" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTaskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textName"
        android:layout_alignRight="@+id/editTaskName"
        android:layout_below="@+id/textDescription"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:scrollbars="vertical" />

    <RadioGroup
        android:id="@+id/radioGroupTaskType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textName"
        android:layout_below="@+id/textDescription"
        android:layout_marginTop="170dp" >

        <RadioButton
            android:id="@+id/radioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/text_text_based_task" />

        <RadioButton
            android:id="@+id/radioPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_photo_task" />

        <RadioButton
            android:id="@+id/radioAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_audio_task" />

        <RadioButton
            android:id="@+id/radioVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_video_task" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxSharedOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupTaskType"
        android:layout_alignLeft="@+id/radioGroupTaskType"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_shared_online" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBoxSharedOnline"
        android:layout_alignBottom="@+id/checkBoxSharedOnline"
        android:layout_alignRight="@+id/editTaskDescription"
        android:text="@string/text_save" />

</RelativeLayout>