<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/newTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/text_new_task" />

    <ToggleButton
        android:id="@+id/myTasks"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textOff="@string/text_my_task"
        android:textOn="@string/text_my_task"  />

    <ToggleButton
        android:id="@+id/otherTasks"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textOff="@string/text_other_task"
        android:textOn="@string/text_other_task" />

    <ToggleButton
        android:id="@+id/stored"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/myTasks"
        android:textOff="@string/text_stored"
        android:textOn="@string/text_stored" />

    <ToggleButton
        android:id="@+id/shared"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stored"
        android:layout_alignBottom="@+id/stored"
        android:layout_alignParentRight="true"
        android:textOff="@string/text_shared"
        android:textOn="@string/text_shared" />

    <ListView
        android:id="@+id/taskList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newTask"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/stored"
        android:scrollbars="vertical"
        tools:listitem="@android:layout/simple_list_item_2" >

    </ListView>

</RelativeLayout>
